# RADclock

./: .gitattributes  .gitignore  AUTHORS  COPYING  ChangeLog  Earthfile  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  build.sh  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  radclock.conf  version.m4
.github/workflows/: ci.yml
Documentation/: FFclockDoc_FreeBSD.txt  FFclockDoc_FreeBSDv4.c  FFclockDoc_Linux.txt  FFclock_notepad.c  RADclockDoc_algo_bidir.c  RADclockDoc_algo_bidir.txt  RADclockDoc_config.c  RADclockDoc_config.txt  RADclockDoc_guide.md  RADclockDoc_guide.txt  RADclockDoc_library.c  RADclockDoc_library.txt  RADclockDoc_stamps.c  RADclockDoc_stamps.txt  RADclockDoc_threads.c  RADclockDoc_threads.txt  RADclockDoc_verbose.c  RADclockDoc_verbose.txt  RADclock_notepad.c
Ext_reference/: build_and_run  dagstamp_gen.c  ext_ref.h
Ext_reference/DAG_support_5.5.0/: dag_config.h  dag_platform.h  dag_platform_freebsd.h  dag_platform_macosx.h  dag_platform_solaris.h  dag_platform_win32.h  dag_protocol_decode.h  dagapi-int.h  dagclarg.h  dagcrc.h  dagdechan_util.h  dagdsm.h  dagimg.h  dagmeta.h  dagmeta_util.h  dagpci.h  dagreg.h  dagtoken.h  dagutil.h  infiniband_protocol_headers.h
FreeBSD/: daemon_startup_script  update_FFsource
Tools/: SHMset  SMSset  compile_FFkernel  confset_binary  confset_value  install_startscript  lastLog  update_FFkernelsource
Workflow_scripts/: portloop  readme.md
Workflow_scripts/RPi/: bashrc  id_rsa.pub  install_earthlyFF  install_earthlyRAD  quick_RAD_build  setup-onPi  setupRAD  setupRPi  sshaccessline  update_workingRADclock
Workflow_scripts/VM/: bashrc  bashtest  bootstrapAccess  cleanbuildtree  collect_FFfiles_Linux  commitCURRport  createDist  createPatch  fixupbash  id_rsa.pub  install_earthlyFF  install_earthlyRAD  install_world  move_into_srctree  quick_FF_build  quick_RAD_build  reBaseTest  retrack  save_linuxSource  seedCURRport  setupRAD  setupVM  transferCommits  update_linuxSource  update_workingFFsource  update_workingRADclock
autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2  traces.3
dag_shm/: dag_attribute_codes.h  dag_component.h  dag_component_codes.h  dag_config_api.h  dag_config_util.h  dag_dlt.h  dag_enum_string_table.h  dag_pcapng.h  dag_pci.h  dag_platform_linux.h  dag_romutil.h  dagapi.h  dagdebug.h  dagdeprecated.h  dagdrv.h  dagerf.h  daginf.h  dagioctl.h  dagnew.h  main.c  proto_ntp.h  run.sh
debian/: daemon_startup_script
examples/: Makefile  Makefile.am  Makefile.in  radclock_capture_packet.c  radclock_get_time.c  radclock_pps.c
examples/.deps/: radclock_capture_packet.Po  radclock_get_time.Po
libradclock/: Makefile  Makefile.am  Makefile.in  ffkernel-fbsd.c  ffkernel-linux.c  ffkernel-none.c  kclock-fbsd.c  kclock-linux.c  kclock-none.c  kclock.h  logger.c  logger.h  pcap-fbsd.c  pcap-linux.c  pcap-none.c  radapi-base.c  radapi-getset.c  radapi-pcap.c  radapi-time.c  radclock-private.h  radclock-read.c  radclock-timepps.h  radclock.h  radclock_telemetry.h  ring_buffer.h
libradclock/.deps/: ffkernel-fbsd.Plo  kclock-fbsd.Plo  logger.Plo  pcap-fbsd.Plo  radapi-base.Plo  radapi-getset.Plo  radapi-pcap.Plo  radapi-time.Plo  radclock-read.Plo
man/: Makefile  Makefile.am  Makefile.in  radclock.8  radclock.conf.5
radclock/: FIFO.c  FIFO.h  Makefile  Makefile.am  Makefile.in  client_ntp.c  config_mgr.c  config_mgr.h  create_stamp.c  create_stamp.h  fixedpoint.c  fixedpoint.h  gen  jdebug.h  misc.h  ntohll.h  ntp_auth.c  ntp_auth.h  proto_ntp.h  pthread_dataproc.c  pthread_extref.c  pthread_mgr.c  pthread_mgr.h  pthread_ntpserver.c  pthread_rawdata.c  pthread_shm.c  pthread_trigger.c  radclock_daemon.h  radclock_main.c  radclock_telemetry.c  rawdata.c  rawdata.h  ring_buffer.c  stampinput-ascii.c  stampinput-livepcap.c  stampinput-spy.c  stampinput-tracefile.c  stampinput.c  stampinput.h  stampinput_int.h  (+12 more)
radclock/.deps/: client_ntp.Po  config_mgr.Po  create_stamp.Po  fixedpoint.Po  pthread_dataproc.Po  pthread_mgr.Po  pthread_ntpserver.Po  pthread_rawdata.Po  pthread_trigger.Po  radclock_main.Po  (+11 more)
tests/: Makefile  Makefile.am  Makefile.in  test_FFclocks.c  test_clockcompare.c  test_shared_memory.c  test_timestamping.c
(+236 files in other folders)
